--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -76,7 +76,7 @@ header{
             p:first-child{
                 margin-right: 0.5rem;
             }
-            span{
+            span.titulo-dolar{
                 color: #0250c9;
             }
         }
